<resources>
    <string name="app_name">HospitalApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="specialist_doc">Specialist - Doctor</string>
    <string name="profile_name">Ebrahem Elzainy</string>
    <string name="my_profile">My Profile</string>
    <string name="employee">Employee</string>
    <string name="search_emp_hint">Search for Employee</string>
    <string name="male">Male</string>
    <string name="_23_06_2001">23-06-2001</string>
    <string name="requried">Required</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="invalid_user_type">Invalid Email or Password!</string>
    <string name="invalid_credentials">Invalid email or password</string>
    <string name="id">id</string>
    <string name="calls">Calls</string>
    <string name="specialist_receptionist">Specialist , Receptionist</string>
    <string name="fromemplist">fromEmpList</string>
    <string name="fromemp">fromEmp</string>
    <string name="create_call">Create Call</string>
    <string name="patient_name">Patient Name</string>
    <string name="age">age</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="send_call">Send Call</string>
    <string name="case_description">Case Description</string>
    <string name="the_request_has_been_canceled_successfully">The request has been canceled\n\t\t\t\t\t\t\t\t\tsuccessfully</string>
    <string name="back_to_home">Back To Home</string>
    <string name="search_for_doctors">Search for doctors</string>
    <string name="please_select_doctor">Please Select Doctor!</string>
    <string name="specialist_doctor">Specialist , Doctor</string>
    <string name="attendance_leaving">attendance - leaving</string>
    <string name="case_details">Case Details</string>
    <string name="logout">Logout</string>
    <string name="finished">Finished</string>
    <string name="case_has_been_logged_out">case has been logged out</string>
    <string name="accept">Accept</string>
    <string name="busy">Busy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="to_continue_login_now">To Continue , Login Now</string>
    <string name="show_details">Show Details</string>
    <string name="gender">Gender</string>
    <string name="cases">Cases</string>
    <string name="end_case">End Case</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="doctor">Doctor</string>
    <string name="nurse">Nurse</string>
    <string name="select_nurse">Select Nurse</string>
    <string name="search_for_nurse">Search for Nurse</string>
    <string name="fromcreatecall">fromCreateCall</string>
    <string name="hr_employee">HR Employee</string>
    <string name="analysis_employee">Analysis Employee</string>
    <string name="please_select_nurse">Please Select Nurse</string>
    <string name="medical_record">Medical record</string>
    <string name="request">Request</string>
    <string name="medical_measurement">Medical Measurement</string>
    <string name="select_analysis_employee">Select Analysis employee</string>
    <string name="search_for_analysis_employee">Search for Analysis employee</string>
    <string name="specialist_nurse">Specilaist Nurse</string>
    <string name="specialist_analysis_employee">Specialist - Analysis employee</string>

    <string-array name="dropdown_items">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>